# DP100-Lab

./: .gitignore  LICENSE  README.md  README.zh-CN.md  package.json
.github/workflows/: build.yml  release.yml
src/: app.css  app.html
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/dp100_proto/: Cargo.toml
src-tauri/dp100_proto/src/: lib.rs
src-tauri/icons/: icon.icns
src-tauri/src/: device.rs  lib.rs  main.rs
src/lib/: i18n.ts
src/lib/components/: MetricCard.svelte  RealtimeChart.svelte  SettingsSheet.svelte
src/lib/i18n/: en.ts  pl.ts  uk.ts  zh_CN.ts
src/lib/stores/: device.ts
src/routes/: +layout.svelte  +page.svelte
