[package]
name = "dp100-app"
version = "0.1.0"
description = "Native macOS app for Alientek DP100 digital power supply"
authors = ["Oleksandr"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "dp100_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
window-vibrancy = "0.5"
dp100_proto = { path = "dp100_proto" }
tauri-plugin-dialog = "2.7.1"
chrono = "0.4.44"
dirs = "6.0.0"

